# agent

./: .env.example  .gitignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml
.github/workflows/: production.yaml
demospace/functions/: functions.py
demospace/livekit/claude/: __init__.py  function_context.py  llm.py  system_prompt.py  tool_calling.py
demospace/livekit/openai_assistant/: __init__.py  llm.py
demospace/livekit/silero/: __init__.py  vad.py
demospace/llm/: prompts.py
demospace/openai/: functions.py
demospace/utils/: env.py
