[tool.poetry]
name = "agent"
version = "0.1.0"
description = ""
authors = ["Nick Fiacco <nick@demospace.ai>"]
readme = "README.md"
packages = [{include = "main.py"}]

[tool.poetry.dependencies]
python = "^3.11"
livekit = "^0.11.1"
livekit-agents = "^0.7.2"
livekit-plugins-deepgram = "^0.5.1"
livekit-plugins-openai = "^0.5.0"
livekit-plugins-elevenlabs = "^0.5.0"
livekit-plugins-silero = "^0.5.1"
python-dotenv = "^1.0.1"
anthropic = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 2